Preload images on grid and home, should resolve jumpy transitions to details page

--- a/src/styles/dogs.scss
+++ b/src/styles/dogs.scss
@@ -13,11 +13,11 @@ $maxWidth: 80vw;
 
   &.home {
     margin: 4px;
-    z-index: 200;
+    z-index: 200;    
   }
 
   &.list {
-    margin: 4px;
+    margin: 2px;
     z-index: 100;
      
     & *{
